<resources>
    <string name="app_name">Quiz3</string>
    <string name="login">Login</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Your Email</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Your password</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Your username</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="hint_fullname">Your full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_confirm_password">Confirm your password</string>
</resources>